--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
     <title>Rewind Arcade </title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🕹️</text></svg>" type="image/svg+xml">
     <meta name="description" content="Modern retro arcade gaming platform" />
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="Nando" />
 
     <meta property="og:title" content="NeoArcade" />
     <meta property="og:description" content="Modern retro arcade gaming platform" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="" />
+    <meta name="twitter:image" content="" />
   </head>
 
   <body>
     <div id="root"></div>
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
+    
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
