Add EmailJS integration for contact form and update footer with LinkedIn icon

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Modern retro arcade gaming platform" />
     <meta name="author" content="Nando" />
 
-    <meta property="og:title" content="NeoArcade" />
+    <meta property="og:title" content="Rewind Arcade" />
     <meta property="og:description" content="Modern retro arcade gaming platform" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="" />
